// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global Actions Bar renders avatar item 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <button
    aria-haspopup="true"
    className="slds-button slds-global-actions__avatar slds-global-actions__item-action"
    title="person name"
  >
    <span
      className="slds-avatar slds-avatar_circle slds-avatar_medium"
    >
      <img
        alt="Person name"
        src="/assets/images/avatar2.jpg"
        title="User avatar"
      />
    </span>
  </button>
</div>
`;

exports[`Global Actions Bar renders favorites item 1`] = `
<div
  className="slds-global-actions__favorites slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <div
    className="slds-button-group"
  >
    <button
      aria-pressed="false"
      className="slds-button slds-button_icon slds-global-actions__favorites-action slds-button_icon slds-button_icon-border slds-button_icon-small"
      onClick={[Function]}
      title="Toggle Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#favorite"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Toggle Favorite
      </span>
    </button>
    <button
      className="slds-button slds-button_icon slds-global-actions__favorites-more slds-button_icon slds-button_icon-border slds-button_icon-small"
      title="View Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        View Favorites
      </span>
    </button>
  </div>
</div>
`;

exports[`Global Actions Bar renders favorites item that is disabled 1`] = `
<div
  className="slds-global-actions__favorites slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <div
    className="slds-button-group"
  >
    <button
      aria-pressed="false"
      className="slds-button slds-button_icon slds-global-actions__favorites-action slds-button_icon slds-button_icon-border slds-button_icon-small slds-is-disabled"
      disabled={true}
      onClick={[Function]}
      title="Toggle Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#favorite"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Toggle Favorite
      </span>
    </button>
    <button
      className="slds-button slds-button_icon slds-global-actions__favorites-more slds-button_icon slds-button_icon-border slds-button_icon-small"
      title="View Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        View Favorites
      </span>
    </button>
  </div>
</div>
`;

exports[`Global Actions Bar renders favorites item that is selected 1`] = `
<div
  className="slds-global-actions__favorites slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <div
    className="slds-button-group"
  >
    <button
      aria-pressed="true"
      className="slds-button slds-button_icon slds-global-actions__favorites-action slds-button_icon slds-button_icon-border slds-button_icon-small slds-is-selected"
      onClick={[Function]}
      title="Toggle Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#favorite"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Toggle Favorite
      </span>
    </button>
    <button
      className="slds-button slds-button_icon slds-global-actions__favorites-more slds-button_icon slds-button_icon-border slds-button_icon-small"
      title="View Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        View Favorites
      </span>
    </button>
  </div>
</div>
`;

exports[`Global Actions Bar renders favorites item with dialog menu 1`] = `
<div
  className="slds-global-actions__favorites slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <div
    className="slds-button-group"
  >
    <button
      aria-pressed="false"
      className="slds-button slds-button_icon slds-global-actions__favorites-action slds-button_icon slds-button_icon-border slds-button_icon-small"
      onClick={[Function]}
      title="Toggle Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#favorite"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Toggle Favorite
      </span>
    </button>
    <button
      className="slds-button slds-button_icon slds-global-actions__favorites-more slds-button_icon slds-button_icon-border slds-button_icon-small"
      title="View Favorites"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        View Favorites
      </span>
    </button>
  </div>
  <section
    aria-describedby="dialog-body-id-1"
    aria-label="My Favorites"
    className="slds-popover slds-nubbin_top slds-dynamic-menu"
    role="dialog"
    style={
      Object {
        "left": "-8rem",
        "position": "absolute",
        "top": "36px",
      }
    }
  >
    <div
      className="slds-popover__body slds-p-horizontal_none"
      id="dialog-body-id-1"
    >
      <div
        aria-orientation={null}
        id="listbox-unique-id"
        role="listbox"
      >
        <ul
          aria-label="My Favorites"
          className="slds-listbox slds-listbox_vertical slds-dropdown_length-10"
          role="group"
        >
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <div
              className="slds-media slds-listbox__option slds-listbox__option_plain"
              role="presentation"
            >
              <h3
                className="slds-listbox__option-header"
                role="presentation"
              >
                My Favorites
              </h3>
            </div>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <div
              className="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
              id="listbox-option-id-1"
              role="option"
              tabIndex="0"
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-standard-account"
                  title={null}
                >
                  <svg
                    aria-hidden={true}
                    className="slds-icon slds-icon_small"
                  >
                    <use
                      xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                    />
                  </svg>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-listbox__option-text slds-listbox__option-text_entity"
                >
                  Acme
                </span>
                <span
                  className="slds-listbox__option-meta slds-listbox__option-meta_entity"
                >
                  Account
                   •
                   
                   San Francisco
                </span>
              </span>
            </div>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <div
              className="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
              id="listbox-option-id-2"
              role="option"
              tabIndex={null}
            >
              <span
                className="slds-media__figure"
              >
                <span
                  className="slds-icon_container slds-icon-standard-account"
                  title={null}
                >
                  <svg
                    aria-hidden={true}
                    className="slds-icon slds-icon_small"
                  >
                    <use
                      xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                    />
                  </svg>
                </span>
              </span>
              <span
                className="slds-media__body"
              >
                <span
                  className="slds-listbox__option-text slds-listbox__option-text_entity"
                >
                  Edge SLA
                </span>
                <span
                  className="slds-listbox__option-meta slds-listbox__option-meta_entity"
                >
                  Account
                   •
                   
                   San Francisco
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <footer
      className="slds-popover__footer"
    >
      <ul>
        <li>
          <button
            className="slds-button slds-button_reset slds-p-vertical_xx-small slds-size_1-of-1"
          >
            <svg
              aria-hidden={true}
              className="slds-button__icon slds-button__icon_left"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#add"
              />
            </svg>
            Favorite this page
          </button>
        </li>
        <li>
          <button
            className="slds-button slds-button_reset slds-p-vertical_xx-small slds-size_1-of-1"
          >
            <svg
              aria-hidden={true}
              className="slds-button__icon slds-button__icon_left"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#edit"
              />
            </svg>
            Edit Favorites
          </button>
        </li>
      </ul>
    </footer>
  </section>
</div>
`;

exports[`Global Actions Bar renders global actions bar 1`] = `
<ul
  className="slds-global-actions"
>
  <li
    className="slds-global-actions__item"
  >
    <div
      className="slds-global-actions__favorites slds-dropdown-trigger slds-dropdown-trigger_click"
    >
      <div
        className="slds-button-group"
      >
        <button
          aria-pressed="false"
          className="slds-button slds-button_icon slds-global-actions__favorites-action slds-button_icon slds-button_icon-border slds-button_icon-small"
          onClick={[Function]}
          title="Toggle Favorites"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#favorite"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Toggle Favorite
          </span>
        </button>
        <button
          className="slds-button slds-button_icon slds-global-actions__favorites-more slds-button_icon slds-button_icon-border slds-button_icon-small"
          title="View Favorites"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_small"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            View Favorites
          </span>
        </button>
      </div>
    </div>
  </li>
  <li
    className="slds-global-actions__item"
  >
    <div
      className="slds-dropdown-trigger slds-dropdown-trigger_click"
    >
      <button
        aria-haspopup="true"
        className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__task slds-global-actions__item-action"
        title="Global Actions"
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#add"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Global Actions
        </span>
      </button>
    </div>
  </li>
  <li
    className="slds-global-actions__item"
  >
    <div
      className="slds-dropdown-trigger slds-dropdown-trigger_click"
    >
      <button
        aria-haspopup="true"
        className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__help slds-global-actions__item-action"
        title="Help and Training"
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-global-header__icon"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#question"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Help and Training
        </span>
      </button>
    </div>
  </li>
  <li
    className="slds-global-actions__item"
  >
    <div
      className="slds-dropdown-trigger slds-dropdown-trigger_click"
    >
      <button
        aria-haspopup="true"
        className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__setup slds-global-actions__item-action"
        title="Setup"
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-global-header__icon"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#setup"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Setup
        </span>
      </button>
    </div>
  </li>
  <li
    className="slds-global-actions__item"
  >
    <div
      className="slds-dropdown-trigger slds-dropdown-trigger_click"
    >
      <button
        aria-atomic="true"
        aria-live="assertive"
        className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__notifications slds-global-actions__item-action"
        title="no new notifications"
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-global-header__icon"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#notification"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          no new notifications
        </span>
      </button>
      <span
        aria-hidden="true"
        className="slds-notification-badge"
      />
    </div>
  </li>
  <li
    className="slds-global-actions__item"
  >
    <div
      className="slds-dropdown-trigger slds-dropdown-trigger_click"
    >
      <button
        aria-haspopup="true"
        className="slds-button slds-global-actions__avatar slds-global-actions__item-action"
        title="person name"
      >
        <span
          className="slds-avatar slds-avatar_circle slds-avatar_medium"
        >
          <img
            alt="Person name"
            src="/assets/images/avatar2.jpg"
            title="User avatar"
          />
        </span>
      </button>
    </div>
  </li>
</ul>
`;

exports[`Global Actions Bar renders help item 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <button
    aria-haspopup="true"
    className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__help slds-global-actions__item-action"
    title="Help and Training"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon slds-global-header__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#question"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Help and Training
    </span>
  </button>
</div>
`;

exports[`Global Actions Bar renders notification item 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <button
    aria-atomic="true"
    aria-live="assertive"
    className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__notifications slds-global-actions__item-action"
    title="no new notifications"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon slds-global-header__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#notification"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      no new notifications
    </span>
  </button>
  <span
    aria-hidden="true"
    className="slds-notification-badge"
  />
</div>
`;

exports[`Global Actions Bar renders notification item with 1 notification 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <button
    aria-atomic="true"
    aria-live="assertive"
    className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__notifications slds-global-actions__item-action"
    title="1 new notifications"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon slds-global-header__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#notification"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      1 new notifications
    </span>
  </button>
  <span
    aria-hidden="true"
    className="slds-notification-badge slds-incoming-notification"
  >
    1
  </span>
</div>
`;

exports[`Global Actions Bar renders notification item with dialog menu 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <button
    aria-atomic="true"
    aria-live="assertive"
    className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__notifications slds-global-actions__item-action"
    title="no new notifications"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon slds-global-header__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#notification"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      no new notifications
    </span>
  </button>
  <span
    aria-hidden="true"
    className="slds-notification-badge slds-show-notification"
  />
</div>
`;

exports[`Global Actions Bar renders setup item 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <button
    aria-haspopup="true"
    className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__setup slds-global-actions__item-action"
    title="Setup"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon slds-global-header__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#setup"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Setup
    </span>
  </button>
</div>
`;

exports[`Global Actions Bar renders task item 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click"
>
  <button
    aria-haspopup="true"
    className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__task slds-global-actions__item-action"
    title="Global Actions"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#add"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Global Actions
    </span>
  </button>
</div>
`;

exports[`Global Actions Bar renders task item with dialog menu 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
>
  <button
    aria-haspopup="true"
    className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__task slds-global-actions__item-action"
    title="Global Actions"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#add"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Global Actions
    </span>
  </button>
  <div
    className="slds-dropdown slds-dropdown_right slds-nubbin_top-right"
    style={
      Object {
        "right": "-1rem",
      }
    }
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <li
        className="slds-dropdown__item"
        role="presentation"
      >
        <a
          href="javascript:void(0);"
          role="menuitem"
          tabIndex="0"
        >
          <span
            className="slds-truncate"
            title="New Event"
          >
            <span
              className="slds-icon_container slds-icon-standard-event slds-m-right_x-small"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon slds-icon_small"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#event"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
            New Event
          </span>
        </a>
      </li>
      <li
        className="slds-dropdown__item"
        role="presentation"
      >
        <a
          href="javascript:void(0);"
          role="menuitem"
          tabIndex="0"
        >
          <span
            className="slds-truncate"
            title="New Note"
          >
            <span
              className="slds-icon_container slds-icon-standard-note slds-m-right_x-small"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon slds-icon_small"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#note"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
            New Note
          </span>
        </a>
      </li>
      <li
        className="slds-dropdown__item"
        role="presentation"
      >
        <a
          href="javascript:void(0);"
          role="menuitem"
          tabIndex="0"
        >
          <span
            className="slds-truncate"
            title="New Email"
          >
            <span
              className="slds-icon_container slds-icon-standard-email slds-m-right_x-small"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon slds-icon_small"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#email"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
            New Email
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Global Header renders global header 1`] = `
<header
  className="slds-global-header_container"
>
  <a
    className="slds-assistive-text slds-assistive-text_focus"
    href="javascript:void(0);"
  >
    Skip to Navigation
  </a>
  <a
    className="slds-assistive-text slds-assistive-text_focus"
    href="javascript:void(0);"
  >
    Skip to Main Content
  </a>
  <div
    className="slds-global-header slds-grid slds-grid_align-spread"
  >
    <div
      className="slds-global-header__item"
    >
      <div
        className="slds-global-header__logo"
      />
    </div>
    <div
      className="slds-global-header__item slds-global-header__item_search"
    />
    <div
      className="slds-global-header__item"
    >
      <ul
        className="slds-global-actions"
      >
        <li
          className="slds-global-actions__item"
        >
          <div
            className="slds-global-actions__favorites slds-dropdown-trigger slds-dropdown-trigger_click"
          >
            <div
              className="slds-button-group"
            >
              <button
                aria-pressed="false"
                className="slds-button slds-button_icon slds-global-actions__favorites-action slds-button_icon slds-button_icon-border slds-button_icon-small"
                onClick={[Function]}
                title="Toggle Favorites"
              >
                <svg
                  aria-hidden={true}
                  className="slds-button__icon"
                >
                  <use
                    xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#favorite"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Toggle Favorite
                </span>
              </button>
              <button
                className="slds-button slds-button_icon slds-global-actions__favorites-more slds-button_icon slds-button_icon-border slds-button_icon-small"
                title="View Favorites"
              >
                <svg
                  aria-hidden={true}
                  className="slds-button__icon slds-button__icon_small"
                >
                  <use
                    xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  View Favorites
                </span>
              </button>
            </div>
          </div>
        </li>
        <li
          className="slds-global-actions__item"
        >
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
          >
            <button
              aria-haspopup="true"
              className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__task slds-global-actions__item-action"
              title="Global Actions"
            >
              <svg
                aria-hidden={true}
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#add"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Global Actions
              </span>
            </button>
          </div>
        </li>
        <li
          className="slds-global-actions__item"
        >
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
          >
            <button
              aria-haspopup="true"
              className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__help slds-global-actions__item-action"
              title="Help and Training"
            >
              <svg
                aria-hidden={true}
                className="slds-button__icon slds-global-header__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#question"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Help and Training
              </span>
            </button>
          </div>
        </li>
        <li
          className="slds-global-actions__item"
        >
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
          >
            <button
              aria-haspopup="true"
              className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__setup slds-global-actions__item-action"
              title="Setup"
            >
              <svg
                aria-hidden={true}
                className="slds-button__icon slds-global-header__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#setup"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Setup
              </span>
            </button>
          </div>
        </li>
        <li
          className="slds-global-actions__item"
        >
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
          >
            <button
              aria-atomic="true"
              aria-live="assertive"
              className="slds-button slds-button_icon slds-button_icon slds-button_icon-container slds-button_icon-small slds-global-actions__notifications slds-global-actions__item-action"
              title="no new notifications"
            >
              <svg
                aria-hidden={true}
                className="slds-button__icon slds-global-header__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#notification"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                no new notifications
              </span>
            </button>
            <span
              aria-hidden="true"
              className="slds-notification-badge"
            >
              0
            </span>
          </div>
        </li>
        <li
          className="slds-global-actions__item"
        >
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
          >
            <button
              aria-haspopup="true"
              className="slds-button slds-global-actions__avatar slds-global-actions__item-action"
              title="person name"
            >
              <span
                className="slds-avatar slds-avatar_circle slds-avatar_medium"
              >
                <img
                  alt="Person name"
                  src="/assets/images/avatar2.jpg"
                  title="User avatar"
                />
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</header>
`;

exports[`Global Header renders global header logo 1`] = `
<div
  className="slds-global-header__logo"
/>
`;

exports[`Global Header renders skip link 1`] = `
Array [
  <a
    className="slds-assistive-text slds-assistive-text_focus"
    href="javascript:void(0);"
  >
    Skip to Navigation
  </a>,
  <a
    className="slds-assistive-text slds-assistive-text_focus"
    href="javascript:void(0);"
  >
    Skip to Main Content
  </a>,
]
`;
